2010-02-27 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Make cor-compare happy.

2010-02-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* Lazy.cs: Implement all lazy modes.

2010-02-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* ExecutionEngineException.cs: Type is obsolete.

2010-02-26 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Implement new v4 IsEnumDefined ().

2010-02-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Implement new v4 GetEnumValue ().

2010-02-24 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Implement new v4 GetEnumValues ().

	* MonoType.cs: Ditto.

2010-02-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Use the right kind of annotations.

2010-02-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs:  Implement new v4 GetEnumNames ().

2010-02-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs:  Implement new v4 GetEnumUnderlyingType ().

2010-02-22 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Implement new v4 GetTypeCodeImpl ().

2010-02-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* Type.cs: Implement new v4 behavior for Equals.
	
Fri Feb 19 09:05:36 CET 2010 Paolo Molaro <lupus@ximian.com>

	* Decimal.cs: fixed Remainder (bug #576341).

2010-02-13 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Environment.cs: implement SystemPageSize.

Fri Feb 12 18:38:01 CET 2010 Paolo Molaro <lupus@ximian.com>

	* InsufficientExecutionStackException.cs: new exception type in 4.0.

2010-02-11 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoType.cs: Implement GetCustomAttributesData.

2010-02-06  Chris Toshok  <toshok@ximian.com>

	* AppDomain.cs (SetupInformationNoCopy): make this internal for
	moonlight.

2010-02-02  Jérémie Laval  <jeremie.laval@gmail.com>

	* AggregateException.cs:
	* OperationCanceledException.cs: Port to .NET 4 beta 2 API

2010-01-31  Zoltan Varga  <vargaz@gmail.com>

	* Enum.cs: Fix a warning.

2010-01-29  Carlos Alberto Cortez <calberto.cortez@gmail.com>
